@@ -36,18 +36,20 @@ class RandomOrdererUtils {
 			Logger logger) {
 		return configurationParameterLookup.apply(RANDOM_SEED_PROPERTY_NAME).map(configurationParameter -> {
 			try {
-				logger.config(() -> String.format("Using custom seed for configuration parameter [%s] with value [%s].",
+				logger.config(() -> "Using custom seed for configuration parameter [%s] with value [%s].".formatted(
 					RANDOM_SEED_PROPERTY_NAME, configurationParameter));
 				return Long.valueOf(configurationParameter);
 			}
 			catch (NumberFormatException ex) {
-				logger.warn(ex,
-					() -> String.format(
-						"Failed to convert configuration parameter [%s] with value [%s] to a long. "
-								+ "Using default seed [%s] as fallback.",
-						RANDOM_SEED_PROPERTY_NAME, configurationParameter, DEFAULT_SEED));
+				logger.warn(ex, () -> """
+						Failed to convert configuration parameter [%s] with value [%s] to a long. \
+						Using default seed [%s] as fallback.""".formatted(RANDOM_SEED_PROPERTY_NAME,
+					configurationParameter, DEFAULT_SEED));
 				return null;
 			}
 		});
+	}
+
+	private RandomOrdererUtils() {
 	}
 }
