@@ -10,9 +10,9 @@
 
 package org.junit.jupiter.engine.descriptor;
 
+import static org.junit.jupiter.engine.support.MethodReflectionUtils.getReturnType;
 import static org.junit.platform.commons.support.AnnotationSupport.findAnnotatedMethods;
 import static org.junit.platform.commons.support.AnnotationSupport.findAnnotation;
-import static org.junit.platform.commons.util.CollectionUtils.toUnmodifiableList;
 import static org.junit.platform.engine.support.discovery.DiscoveryIssueReporter.Condition.alwaysSatisfied;
 
 import java.lang.annotation.Annotation;
@@ -30,7 +30,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.extension.ClassTemplateInvocationLifecycleMethod;
 import org.junit.platform.commons.support.HierarchyTraversalMode;
 import org.junit.platform.commons.support.ModifierSupport;
-import org.junit.platform.commons.util.ReflectionUtils;
 import org.junit.platform.engine.DiscoveryIssue;
 import org.junit.platform.engine.DiscoveryIssue.Severity;
 import org.junit.platform.engine.support.descriptor.MethodSource;
@@ -76,8 +75,7 @@ final class LifecycleMethodUtils {
 		findAllClassTemplateInvocationLifecycleMethods(testClass) //
 				.forEach(method -> findClassTemplateInvocationLifecycleMethodAnnotation(method) //
 						.ifPresent(annotation -> {
-							String message = String.format(
-								"@%s method '%s' must not be declared in test class '%s' because it is not annotated with @%s.",
+							String message = "@%s method '%s' must not be declared in test class '%s' because it is not annotated with @%s.".formatted(
 								annotation.lifecycleMethodAnnotation().getSimpleName(), method.toGenericString(),
 								testClass.getName(), annotation.classTemplateAnnotation().getSimpleName());
 							issueReporter.reportIssue(createIssue(Severity.ERROR, message, method));
@@ -135,14 +133,13 @@ final class LifecycleMethodUtils {
 				.peek(isNotPrivateWarning(issueReporter, annotationType::getSimpleName).toConsumer()) //
 				.filter(returnsPrimitiveVoid(issueReporter, __ -> annotationType.getSimpleName()).and(
 					additionalCondition).toPredicate()) //
-				.collect(toUnmodifiableList());
+				.toList();
 	}
 
 	private static Condition<Method> isStatic(DiscoveryIssueReporter issueReporter,
 			Function<Method, String> annotationNameProvider) {
 		return issueReporter.createReportingCondition(ModifierSupport::isStatic, method -> {
-			String message = String.format(
-				"@%s method '%s' must be static unless the test class is annotated with @TestInstance(Lifecycle.PER_CLASS).",
+			String message = "@%s method '%s' must be static unless the test class is annotated with @TestInstance(Lifecycle.PER_CLASS).".formatted(
 				annotationNameProvider.apply(method), method.toGenericString());
 			return createIssue(Severity.ERROR, message, method);
 		});
@@ -151,7 +148,7 @@ final class LifecycleMethodUtils {
 	private static Condition<Method> isNotStatic(DiscoveryIssueReporter issueReporter,
 			Function<Method, String> annotationNameProvider) {
 		return issueReporter.createReportingCondition(ModifierSupport::isNotStatic, method -> {
-			String message = String.format("@%s method '%s' must not be static.", annotationNameProvider.apply(method),
+			String message = "@%s method '%s' must not be static.".formatted(annotationNameProvider.apply(method),
 				method.toGenericString());
 			return createIssue(Severity.ERROR, message, method);
 		});
@@ -159,7 +156,7 @@ final class LifecycleMethodUtils {
 
 	private static Condition<Method> isNotPrivateError(DiscoveryIssueReporter issueReporter) {
 		return issueReporter.createReportingCondition(ModifierSupport::isNotPrivate, method -> {
-			String message = String.format("@%s method '%s' must not be private.",
+			String message = "@%s method '%s' must not be private.".formatted(
 				classTemplateInvocationLifecycleMethodAnnotationName(method), method.toGenericString());
 			return createIssue(Severity.ERROR, message, method);
 		});
@@ -168,8 +165,7 @@ final class LifecycleMethodUtils {
 	private static Condition<Method> isNotPrivateWarning(DiscoveryIssueReporter issueReporter,
 			Supplier<String> annotationNameProvider) {
 		return issueReporter.createReportingCondition(ModifierSupport::isNotPrivate, method -> {
-			String message = String.format(
-				"@%s method '%s' should not be private. This will be disallowed in a future release.",
+			String message = "@%s method '%s' should not be private. This will be disallowed in a future release.".formatted(
 				annotationNameProvider.get(), method.toGenericString());
 			return createIssue(Severity.WARNING, message, method);
 		});
@@ -177,9 +173,9 @@ final class LifecycleMethodUtils {
 
 	private static Condition<Method> returnsPrimitiveVoid(DiscoveryIssueReporter issueReporter,
 			Function<Method, String> annotationNameProvider) {
-		return issueReporter.createReportingCondition(ReflectionUtils::returnsPrimitiveVoid, method -> {
-			String message = String.format("@%s method '%s' must not return a value.",
-				annotationNameProvider.apply(method), method.toGenericString());
+		return issueReporter.createReportingCondition(method -> getReturnType(method) == void.class, method -> {
+			String message = "@%s method '%s' must not return a value.".formatted(annotationNameProvider.apply(method),
+				method.toGenericString());
 			return createIssue(Severity.ERROR, message, method);
 		});
 	}
