@@ -49,7 +49,7 @@ class ParameterizedTestSpiInstantiator {
 			Class<? extends T> implementationClass) {
 
 		Preconditions.condition(!ReflectionUtils.isInnerClass(implementationClass),
-			() -> String.format("The %s [%s] must be either a top-level class or a static nested class",
+			() -> "The %s [%s] must be either a top-level class or a static nested class".formatted(
 				spiInterface.getSimpleName(), implementationClass.getName()));
 
 		Constructor<?>[] constructors = implementationClass.getDeclaredConstructors();
@@ -65,11 +65,14 @@ class ParameterizedTestSpiInstantiator {
 			}
 		}
 		// Otherwise...
-		String message = String.format(
-			"Failed to find constructor for %s [%s]. "
-					+ "Please ensure that a no-argument or a single constructor exists.",
+		String message = """
+				Failed to find constructor for %s [%s]. \
+				Please ensure that a no-argument or a single constructor exists.""".formatted(
 			spiInterface.getSimpleName(), implementationClass.getName());
 		throw new JUnitException(message);
+	}
+
+	private ParameterizedTestSpiInstantiator() {
 	}
 
 }
