@@ -14,6 +14,7 @@ import static org.apiguardian.api.API.Status.EXPERIMENTAL;
 import static org.apiguardian.api.API.Status.STABLE;
 
 import org.apiguardian.api.API;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.extension.ParameterContext;
 import org.junit.jupiter.api.extension.ParameterResolver;
 import org.junit.jupiter.params.support.FieldContext;
@@ -25,8 +26,12 @@ import org.junit.platform.commons.JUnitException;
  *
  * <p>Such an {@code ArgumentConverter} is applied to the method parameter
  * of a {@link org.junit.jupiter.params.ParameterizedTest @ParameterizedTest}
- * method with the help of a
- * {@link org.junit.jupiter.params.converter.ConvertWith @ConvertWith} annotation.
+ * or a constructor parameter or
+ * {@link org.junit.jupiter.params.Parameter @Parameter}-annotated field of a
+ * {@link org.junit.jupiter.params.ParameterizedClass @ParameterizedClass} with
+ * the help of a
+ * {@link org.junit.jupiter.params.converter.ConvertWith @ConvertWith}
+ * annotation.
  *
  * <p>Implementations must provide a no-args constructor or a single unambiguous
  * constructor to use {@linkplain ParameterResolver parameter resolution}. They
@@ -64,7 +69,8 @@ public interface ArgumentConverter {
 	 * @throws ArgumentConversionException if an error occurs during the
 	 * conversion
 	 */
-	Object convert(Object source, ParameterContext context) throws ArgumentConversionException;
+	@Nullable
+	Object convert(@Nullable Object source, ParameterContext context) throws ArgumentConversionException;
 
 	/**
 	 * Convert the supplied {@code source} object according to the supplied
@@ -79,11 +85,10 @@ public interface ArgumentConverter {
 	 * conversion
 	 * @since 5.13
 	 */
-	@API(status = EXPERIMENTAL, since = "5.13")
-	default Object convert(Object source, FieldContext context) throws ArgumentConversionException {
-		throw new JUnitException(
-			String.format("ArgumentConverter does not override the convert(Object, FieldContext) method. "
-					+ "Please report this issue to the maintainers of %s.",
-				getClass().getName()));
+	@API(status = EXPERIMENTAL, since = "6.0")
+	default @Nullable Object convert(@Nullable Object source, FieldContext context) throws ArgumentConversionException {
+		throw new JUnitException("""
+				ArgumentConverter does not override the convert(Object, FieldContext) method. \
+				Please report this issue to the maintainers of %s.""".formatted(getClass().getName()));
 	}
 }
