@@ -17,7 +17,6 @@ import java.io.File;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 import java.util.Optional;
 
@@ -41,7 +40,7 @@ import org.junit.platform.engine.DiscoverySelectorIdentifier;
  * @see #getRawPath()
  */
 @API(status = STABLE, since = "1.0")
-public class DirectorySelector implements DiscoverySelector {
+public final class DirectorySelector implements DiscoverySelector {
 
 	private final String path;
 
@@ -67,7 +66,7 @@ public class DirectorySelector implements DiscoverySelector {
 	 * @see #getRawPath()
 	 */
 	public Path getPath() {
-		return Paths.get(this.path);
+		return Path.of(this.path);
 	}
 
 	/**
