@@ -12,8 +12,6 @@ package org.junit.platform.testkit.engine;
 
 import static java.util.Collections.sort;
 import static java.util.function.Predicate.isEqual;
-import static java.util.stream.Collectors.toList;
-import static org.apiguardian.api.API.Status.EXPERIMENTAL;
 import static org.apiguardian.api.API.Status.MAINTAINED;
 import static org.junit.platform.commons.util.FunctionUtils.where;
 import static org.junit.platform.testkit.engine.Event.byPayload;
@@ -24,7 +22,6 @@ import java.io.PrintWriter;
 import java.io.Writer;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -39,6 +36,7 @@ import org.assertj.core.api.Condition;
 import org.assertj.core.api.ListAssert;
 import org.assertj.core.api.SoftAssertions;
 import org.assertj.core.data.Index;
+import org.jspecify.annotations.Nullable;
 import org.junit.platform.commons.util.Preconditions;
 import org.junit.platform.engine.TestExecutionResult;
 import org.junit.platform.engine.TestExecutionResult.Status;
@@ -57,14 +55,14 @@ public final class Events {
 	private final String category;
 
 	Events(Stream<Event> events, String category) {
-		this(Preconditions.notNull(events, "Event stream must not be null").collect(toList()), category);
+		this(Preconditions.notNull(events, "Event stream must not be null").toList(), category);
 	}
 
 	Events(List<Event> events, String category) {
 		Preconditions.notNull(events, "Event list must not be null");
 		Preconditions.containsNoNullElements(events, "Event list must not contain null elements");
 
-		this.events = Collections.unmodifiableList(events);
+		this.events = List.copyOf(events);
 		this.category = category;
 	}
 
@@ -215,7 +213,7 @@ public final class Events {
 	 * @return the filtered {@code Events}; never {@code null}
 	 * @since 1.12
 	 */
-	@API(status = EXPERIMENTAL, since = "1.12")
+	@API(status = MAINTAINED, since = "1.13.3")
 	public Events fileEntryPublished() {
 		return new Events(eventsByType(EventType.FILE_ENTRY_PUBLISHED), this.category + " File Entry Published");
 	}
@@ -378,6 +376,7 @@ public final class Events {
 	 * @param out the {@code OutputStream} to print to; never {@code null}
 	 * @return this {@code Events} object for method chaining; never {@code null}
 	 */
+	@SuppressWarnings("DefaultCharset")
 	public Events debug(OutputStream out) {
 		Preconditions.notNull(out, "OutputStream must not be null");
 		debug(new PrintWriter(out, true));
@@ -446,7 +445,7 @@ public final class Events {
 				.map(condition -> findEvent(events, softly, condition))
 				.filter(Objects::nonNull)
 				.map(events::indexOf)
-				.collect(toList());
+				.toList();
 		// @formatter:on
 
 		if (isNotInIncreasingOrder(indices)) {
@@ -469,14 +468,15 @@ public final class Events {
 		}
 	}
 
-	private static Event findEvent(List<Event> events, SoftAssertions softly, Condition<? super Event> condition) {
+	private static @Nullable Event findEvent(List<Event> events, SoftAssertions softly,
+			Condition<? super Event> condition) {
 		// @formatter:off
 		Optional<Event> matchedEvent = events.stream()
 				.filter(condition::matches)
 				.findFirst();
 		// @formatter:on
 
-		if (!matchedEvent.isPresent()) {
+		if (matchedEvent.isEmpty()) {
 			softly.fail("Condition did not match any event: " + condition);
 		}
 
