@@ -29,6 +29,7 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.FieldSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.junit.platform.console.options.StdStreamTestCase;
+import org.junit.platform.console.subpackage.FailingTestCase;
 
 /**
  * @since 1.0
@@ -36,35 +37,24 @@ import org.junit.platform.console.options.StdStreamTestCase;
 class ConsoleLauncherIntegrationTests {
 
 	@Test
-	void executeWithoutArgumentsFailsAndPrintsHelpInformation() {
+	void executeWithoutSubcommandFailsAndPrintsHelpInformation() {
 		var result = new ConsoleLauncherWrapper().execute(-1);
 		assertAll("empty args array results in display of help information and an exception stacktrace", //
 			() -> assertThat(result.err).contains("help information"), //
-			() -> assertThat(result.err).contains(
-				"Please specify an explicit selector option or use --scan-class-path or --scan-modules") //
+			() -> assertThat(result.err).contains("Missing required subcommand") //
 		);
 	}
 
-	@ParameterizedTest
-	@ValueSource(strings = { //
-			"-e junit-jupiter -p org.junit.platform.console.subpackage", //
-			"execute -e junit-jupiter -p org.junit.platform.console.subpackage" //
-	})
-	void executeWithoutExcludeClassnameOptionDoesNotExcludeClassesAndMustIncludeAllClassesMatchingTheStandardClassnamePattern(
-			String line) {
-		var args = line.split(" ");
+	@Test
+	void executeWithoutExcludeClassnameOptionDoesNotExcludeClassesAndMustIncludeAllClassesMatchingTheStandardClassnamePattern() {
+		String[] args = { "execute", "-e", "junit-jupiter", "-p", "org.junit.platform.console.subpackage" };
 		assertEquals(9, new ConsoleLauncherWrapper().execute(args).getTestsFoundCount());
 	}
 
-	@ParameterizedTest
-	@ValueSource(strings = {
-			"-e junit-jupiter -p org.junit.platform.console.subpackage --exclude-classname"
-					+ " ^org\\.junit\\.platform\\.console\\.subpackage\\..*",
-			"execute -e junit-jupiter -p org.junit.platform.console.subpackage --exclude-classname"
-					+ " ^org\\.junit\\.platform\\.console\\.subpackage\\..*" //
-	})
-	void executeWithExcludeClassnameOptionExcludesClasses(String line) {
-		var args = line.split(" ");
+	@Test
+	void executeWithExcludeClassnameOptionExcludesClasses() {
+		String[] args = { "execute", "-e", "junit-jupiter", "-p", "org.junit.platform.console.subpackage",
+				"--exclude-classname", "^org\\.junit\\.platform\\.console\\.subpackage\\..*" };
 		var result = new ConsoleLauncherWrapper().execute(args);
 		assertAll("all subpackage test classes are excluded by the class name filter", //
 			() -> assertArrayEquals(args, result.args), //
@@ -88,18 +78,17 @@ class ConsoleLauncherIntegrationTests {
 
 	@ParameterizedTest
 	@ValueSource(strings = { //
-			"-e junit-jupiter -o java.base", "-e junit-jupiter --select-module java.base", //
-			"execute -e junit-jupiter -o java.base", "execute -e junit-jupiter --select-module java.base" //
+			"execute -e junit-jupiter -o java.base", //
+			"execute -e junit-jupiter --select-module java.base" //
 	})
 	void executeSelectingModuleNames(String line) {
 		var args = line.split(" ");
 		assertEquals(0, new ConsoleLauncherWrapper().execute(args).getTestsFoundCount());
 	}
 
-	@ParameterizedTest
-	@ValueSource(strings = { "-e junit-jupiter --scan-modules", "execute -e junit-jupiter --scan-modules" })
-	void executeScanModules(String line) {
-		var args = line.split(" ");
+	@Test
+	void executeScanModules() {
+		String[] args = { "execute", "-e", "junit-jupiter", "--scan-modules" };
 		assertEquals(0, new ConsoleLauncherWrapper().execute(args).getTestsFoundCount());
 	}
 
@@ -109,7 +98,7 @@ class ConsoleLauncherIntegrationTests {
 			throws IOException {
 
 		var outputFile = tempDir.resolve("output.txt");
-		var line = String.format("execute -e junit-jupiter --select-class %s %s %s", StdStreamTestCase.class.getName(),
+		var line = "execute -e junit-jupiter --select-class %s %s %s".formatted(StdStreamTestCase.class.getName(),
 			redirectedStream, outputFile);
 		var args = line.split(" ");
 		new ConsoleLauncherWrapper().execute(args);
@@ -125,7 +114,7 @@ class ConsoleLauncherIntegrationTests {
 	@Test
 	void executeWithRedirectedStdStreamsToSameFile(@TempDir Path tempDir) throws IOException {
 		var outputFile = tempDir.resolve("output.txt");
-		var line = String.format("execute -e junit-jupiter --select-class %s --redirect-stdout %s --redirect-stderr %s",
+		var line = "execute -e junit-jupiter --select-class %s --redirect-stdout %s --redirect-stderr %s".formatted(
 			StdStreamTestCase.class.getName(), outputFile, outputFile);
 		var args = line.split(" ");
 		new ConsoleLauncherWrapper().execute(args);
@@ -133,6 +122,18 @@ class ConsoleLauncherIntegrationTests {
 		assertTrue(Files.exists(outputFile), "File does not exist.");
 		assertEquals(StdStreamTestCase.getStdoutOutputFileSize() + StdStreamTestCase.getStderrOutputFileSize(),
 			Files.size(outputFile), "Invalid file size.");
+	}
+
+	@Test
+	void stopsAfterFirstFailingTest() {
+		var result = new ConsoleLauncherWrapper().execute(1, "execute", "-e", "junit-jupiter", "--select-class",
+			FailingTestCase.class.getName(), "--fail-fast", "--disable-ansi-colors");
+
+		assertThat(result.getTestsStartedCount()).isEqualTo(1);
+		assertThat(result.getTestsFailedCount()).isEqualTo(1);
+		assertThat(result.getTestsSkippedCount()).isEqualTo(1);
+
+		assertThat(result.out).endsWith("%nTest execution was cancelled due to --fail-fast mode.%n%n".formatted());
 	}
 
 }
