@@ -13,11 +13,14 @@ package org.junit.platform.console.options;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Optional;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -36,7 +39,7 @@ class ExecuteTestsCommandTests {
 
 	@BeforeEach
 	void setUp() {
-		when(consoleTestExecutor.execute(any(), any())).thenReturn(summary);
+		when(consoleTestExecutor.execute(any(), any(), anyBoolean())).thenReturn(summary);
 	}
 
 	@Test
@@ -96,12 +99,22 @@ class ExecuteTestsCommandTests {
 
 	@Test
 	void parseValidXmlReportsDirs() {
-		var dir = Paths.get("build", "test-results");
+		var dir = Path.of("build", "test-results");
 		// @formatter:off
 		assertAll(
 				() -> assertEquals(Optional.empty(), parseArgs().getReportsDir()),
 				() -> assertEquals(Optional.of(dir), parseArgs("--reports-dir", "build/test-results").getReportsDir()),
 				() -> assertEquals(Optional.of(dir), parseArgs("--reports-dir=build/test-results").getReportsDir())
+		);
+		// @formatter:on
+	}
+
+	@Test
+	void parseValidFailFast() {
+		// @formatter:off
+		assertAll(
+				() -> assertFalse(parseArgs().isFailFast()),
+				() -> assertTrue(parseArgs("--fail-fast").isFailFast())
 		);
 		// @formatter:on
 	}
